# Downloads-Warden-MCP

./: .gitignore  CLAUDE_SETUP.md  Dockerfile  README.md  SETUP.md  SETUP_INSTRUCTIONS.md  TESTING.md  claude_desktop_config.json  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: copilot-instructions.md
src/: __init__.py  exceptions.py  interfaces.py  rate_limiter.py  server.py
src/models/: __init__.py  file_info.py  models.py  operation_result.py  scan_result.py
src/services/: __init__.py  downloads_service.py
src/utils/: __init__.py  file_utils.py  paths.py
tests/: test_downloads_service.py  test_server.py  test_utils.py
