[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "downloads-warden"
version = "0.1.0"
description = "A Model Context Protocol server for intelligent Downloads folder management"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
]

[project.scripts]
downloads-warden = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
