[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "downloads-warden"
version = "1.0.0"
description = "An MCP server for intelligent Downloads folder management"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0",
    "pylint>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
]

